generated/checkers/gen/AllGen-Buffer-Overflow-81137162bfaa7278785b24c1fd2e9e74f082e8e4/build_logs/syntax-repair-07/build_stderr_1.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘bool {anonymous}::SAGenTestChecker::isCharLikeType(clang::QualType) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:61:34: error: ‘const class clang::Type’ has no member named ‘isSignedCharType’; did you mean ‘isWideCharType’?
   61 |   return CT->isCharType() || CT->isSignedCharType() || CT->isUnsignedCharType();
      |                                  ^~~~~~~~~~~~~~~~
      |                                  isWideCharType
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:61:60: error: ‘const class clang::Type’ has no member named ‘isUnsignedCharType’; did you mean ‘isWideCharType’?
   61 |   return CT->isCharType() || CT->isSignedCharType() || CT->isUnsignedCharType();
      |                                                            ^~~~~~~~~~~~~~~~~~
      |                                                            isWideCharType
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
